# rust-api-server-

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: build.yml
example/: testDB.sql  testDb.postman_collection.json
src/: binder.rs  encoder.rs  handlers.rs  main.rs  parser.rs  response.rs
