[package]
name = "rust-api-server"
authors = ["gushiii <zrjie001@gmail.com>"]
description = "A zero-code API server framework in Rust, leveraging runtime reflection to dynamically convert PgRow to JSON Value and providing generic, injection-proof dynamic CRUD handlers."
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.52.3", features = ["full"] }