[package]
name = "rust-api-server"
authors = ["gushiii <zrjie001@gmail.com>"]
description = "A zero-code API server framework in Rust, leveraging runtime reflection to dynamically convert PgRow to JSON Value and providing generic, injection-proof dynamic CRUD handlers."
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "json",
] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }

[patch.crates-io]
# 强行把所有第三方库引入的 rsa 依赖重定向到本地的空桩
rsa = { path = "./rsa-mock" }
