[package]
name = "rust-api-server-engine"
authors = ["gushiii <zrjie001@gmail.com>"]
description = "A CRUD API server engine framework in Rust, leveraging runtime reflection to dynamically convert PgRow to JSON Value and providing generic, injection-proof dynamic CRUD handlers."
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.1"
dotenvy = "0.15.7"
jsonwebtoken = { "version" = "10.4.0", features = ["rust_crypto"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "json",
    "bigdecimal",
] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
